# Traditional-OpenGL

./: CMakeLists.txt  RgbImage.cpp  RgbImage.h  main.cpp
